--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 joblib==1.3.2
 matplotlib==3.8.2
-numpy==1.26.2
+numpy==1.26.3
 pandas==2.1.4
+Requests==2.31.0
 scikit_learn==1.3.2
 streamlit==1.29.0
-xgboost==2.0.3
+streamlit_option_menu==0.3.6
